force-app/main/default/objects/Invoice__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pxm Invoices (Billing Account)</relationshipLabel>
    <relationshipName>Pxm_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>