force-app/main/default/objects/Invoice__c/fields/Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip__c</fullName>
    <formula>Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Zip</label>
    <type>Text</type>
</CustomField>