force-app/main/default/objects/Invoice__c/fields/Corporate_Currency_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Currency_Conversion_Date__c</fullName>
    <label>Corporate Currency Conversion Date</label>
    <type>Date</type>
</CustomField>