force-app/main/default/objects/Invoice__c/fields/Corporate_Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Currency_Conversion_Rate__c</fullName>
    <label>Corporate Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>