force-app/main/default/objects/Invoice__c/fields/Corporate_Currency_Converted_TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Currency_Converted_TotalAmount__c</fullName>
    <label>Corporate Currency Converted TotalAmount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>