force-app/main/default/objects/Invoice__c/fields/Functional_Currency_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency_Conversion_Date__c</fullName>
    <label>Functional Currency Conversion Date</label>
    <type>Date</type>
</CustomField>