force-app/main/default/objects/Invoice__c/fields/Functional_Currency_Converted_TotalAmout__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency_Converted_TotalAmout__c</fullName>
    <label>Functional Currency Converted TotalAmout</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>