force-app/main/default/objects/Invoice__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <formula>Total_Amount_With_Sales_Tax__c 
- Payments_Received__c 
- Credit_Memo_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>