force-app/main/default/objects/Invoice__c/fields/Old_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Document_Number__c</fullName>
    <label>Old Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>