force-app/main/default/objects/Invoice__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pxm_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>