force-app/main/default/objects/Invoice__c/fields/Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Payments_Received__c</fullName>
    <label>Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>