force-app/main/default/objects/Invoice__c/fields/Physical_Location__c.field-meta.xml
<CustomField>
    <fullName>Physical_Location__c</fullName>
    <label>Physical Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>