force-app/main/default/objects/Invoice__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Pxm Invoices</relationshipLabel>
    <relationshipName>Pxm_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>