force-app/main/default/objects/Invoice__c/fields/Reference_Entity__c.field-meta.xml
<CustomField>
    <fullName>Reference_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Entity</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pxm Invoices</relationshipLabel>
    <relationshipName>Pxm_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>