force-app/main/default/objects/Invoice__c/fields/Revenue_Location__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Location__c</fullName>
    <label>Revenue Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>