force-app/main/default/objects/Invoice__c/fields/Total_Amount_With_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_With_Sales_Tax__c</fullName>
    <formula>Total_Charges__c * (Sales_Tax__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount With Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>