force-app/main/default/objects/Invoice__c/fields/Total_Charge_Amount_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Amount_with_Tax__c</fullName>
    <label>Total Charge Amount with Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>