force-app/main/default/objects/Invoice__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <label>Total Charges</label>
    <summarizedField>Invoice_Line__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Pxm_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>