force-app/main/default/objects/Invoice__c/fields/Total_Taxes_Captured_at_Header__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxes_Captured_at_Header__c</fullName>
    <label>Total Taxes Captured at Header</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>