force-app/main/default/objects/Invoice__c/fields/TotalAdjustmentAmountWithTax__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentAmountWithTax__c</fullName>
    <label>TotalAdjustmentAmountWithTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>